--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "misaka-search-api",
   "version": "1.0.0",
-  "main": "index.mjs",
+  "main": "server.mjs",
   "license": "MIT",
   "scripts": {
-    "start": "node index.mjs"
+    "start": "node server.mjs"
   },
   "dependencies": {
     "cron": "^2.4.0",
