--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.mjs"
   },
   "dependencies": {
+    "@discordjs/collection": "^1.5.1",
     "cron": "^2.4.0",
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
