--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cron": "^2.4.0",
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
-    "got": "11.8.6"
+    "got": "^13.0.0",
+    "json5": "^2.2.3"
   }
 }
