--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.0",
-    "cron": "^2.4.3",
+    "axios": "^1.6.0",
+    "cron": "2.4.3",
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
     "json5": "^2.2.3"
