--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "cron": "2.4.3",
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
